[package]
name = "razel-analysis"
version = "0.1.0"
edition = "2021"
description = "razelv4 analysis node-kind: CONFIGURED_TARGET (run a rule's impl → providers, over the engine) (role: logic)."
license = "MIT OR Apache-2.0"

[dependencies]
razel-core = { path = "../razel-core", version = "0.1.0" }
razel-ids = { path = "../razel-ids", version = "0.1.0" }
razel-engine-api = { path = "../razel-engine-api", version = "0.1.0" }
razel-os-api = { path = "../razel-os-api", version = "0.1.0" }
razel-bzl-api = { path = "../razel-bzl-api", version = "0.1.0" }
razel-source = { path = "../razel-source", version = "0.1.0" }
razel-load = { path = "../razel-load", version = "0.1.0" }
razel-package = { path = "../razel-package", version = "0.1.0" }
razel-toolchain = { path = "../razel-toolchain", version = "0.1.0" }
# APIs + the loading/toolchain logic + spine only — never the engine/os/starlark IMPLs (a root wires those).

[features]
# RED-FIRST: don't thread the parent's configuration into a dependency's key → the config dimension is dropped
# from child keys (the anti-corner (III) "identity transform now" property regresses).
mutant_ct_drops_config = []
# RED-FIRST: drop the rule .bzl CONTENT dependency → an impl-only edit becomes invisible (stale analysis).
mutant_ct_skips_rule_file_dep = []
# RED-FIRST: drop the resolved toolchains when running the rule → ctx.toolchains is empty (G4 exam goes red).
mutant_ct_drops_toolchains = []
# RED-FIRST: absorb a missing configuration into the "" platform name → a config-less toolchain-requiring target
# silently resolves against a default platform instead of failing closed (anti-Absorb test goes red).
mutant_ct_absorbs_missing_config = []
# RED-FIRST (files-chaining): drop the DIRECT-dep output → producing-action chaining map from the CT value.
# A dependent rule's action input that names a dep's declared output (a rust_binary linking a rust_library's
# rlib, listed from `dep[DefaultInfo].files`) can then no longer resolve to its producer — it falls through
# to Source, the derived file is absent on disk, and the build fails closed (and the edit→re-run granularity
# edge is severed). Turns the rust-rules chaining proof RED.
mutant_chain_drops_dep_files = []
# RED-FIRST (transitive files-chaining — the self-host wave): drop the TRANSITIVE merge of each direct dep's
# own (already-transitive) dep_outputs into the parent's map. Only DIRECT deps' outputs remain resolvable, so
# a dep-of-dep rlib that a dependent action lists as an input (e.g. razel-wire-cbor's action naming
# razel-core's rlib, reached transitively through razel-wire-api) falls through to Source, is absent on disk,
# and the multi-crate self-host chain fails closed (typed NotFound). Turns the self-host chain proof RED.
mutant_transitive_outputs_not_merged = []
# RED-FIRST (T17 external roots, D1 label side): drop the `@<repo>//` marker from the external package string
# in resolve_dep, so an external package `@shape//foo` collapses to its bare pkg-rel `foo` and COLLIDES in CT
# identity with an internal package of the same suffix. Turns
# `external_and_internal_same_suffix_packages_are_distinct_cts` RED (the distinct-identity law).
mutant_repo_prefix_stripped_from_package = []
# RED-FIRST (C7 visibility, D7): skip the cross-package visibility enforcement → a private (default) target
# consumed across a package boundary silently resolves instead of a typed analysis error naming both labels.
# Turns the visibility guard test RED (unit + over-the-root).
mutant_visibility_ignored = []
# RED-FIRST (T19-P2 alias builtin): the native `alias` forwards an EMPTY provider set instead of the
# `actual` target's providers → a dependent that reads a forwarded provider (`dep[RustInfo]` in rust.bzl)
# through the vendored-crates hub alias can no longer find it and the build fails closed. Turns the alias
# provider-passthrough proof (tests/rust_third_party.rs) RED. Never enable in a real build.
mutant_alias_breaks_provider_passthrough = []
# RED-FIRST (T20 select): a select Branch ignores condition matching and takes the FIRST dict entry's value
# → the WRONG branch is chosen (proved by its content) regardless of which config_setting actually matched.
# Turns the select-resolves-to-correct-branch driving proofs RED.
mutant_select_takes_first_branch = []
# RED-FIRST (T20 select): a select Branch prefers `//conditions:default` over any real matching condition →
# a target that must take a specific matched branch takes the default instead. Turns the match proofs RED.
mutant_select_default_always_wins = []
# RED-FIRST (T20 select): a `config_setting` short-circuits its match to TRUE regardless of the resolving
# configuration → a setting that should NOT match now does, so the ambiguity + fail-closed (no-match) proofs
# no longer fire. Turns the config_setting matching + ambiguity proofs RED.
mutant_config_setting_matches_all = []
